--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
     "react-dom": "^18.2.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.22.11",
+    "eslint": "^8.48.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "nodemon": "^3.0.1"
   }
 }
