--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.11",
+    "babel-jest": "^29.6.4",
     "eslint": "^8.48.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "nodemon": "^3.0.1"
+    "jest": "^29.6.4",
+    "nodemon": "^3.0.1",
+    "react-test-renderer": "^18.2.0"
   }
 }
